[package]
name = "tower-web-test"
version = "0.1.0"
authors = ["flyq <flyq951@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-web = "0.3.7"
jieba-rs = "0.2"
log = "0.4.0"
env_logger = "0.5.12"
serde = "1.0.70"
